# EyeSpy

./: CMakeLists.txt  README.md  config.json
OpenCV-PC-example/: CMakeLists.txt  config.json
OpenCV-PC-example/src/: main.cpp  mainloop.cpp  mainloop.h
PCB/v1.0/V1.0/: V1.0-cache.lib  V1.0.bak  V1.0.kicad_pcb  V1.0.kicad_pcb-bak  V1.0.pro  V1.0.sch  fp-info-cache
PC_view_mainwindow/src/: cvimagewidget.h  mainwindow.cpp
src/: main.cpp  mainloop.cpp  mainloop.h  tools.cpp  tools.h
src/EPD/: DEV_EPD_Config.cpp  DEV_EPD_Config.h  EPD_2in13.cpp  EPD_2in13.h  GUI_Paint.cpp  GUI_Paint.h  main.c
src/EPD/Fonts/: font20.h  fonts.cpp  fonts.h
src/I2C/: PCA9685.cpp  PCA9685.h  device.cpp  device.h
src/ImageProcessing/: acquisition.cpp  acquisition.h  adaptivethreshold.cpp  adaptivethreshold.h  boundariesfinder.cpp  boundariesfinder.h  boundariesfinder2.cpp  boundariesfinder2.h  capture.cpp  capture.h  difference.cpp  difference.h  postprocessing.cpp  postprocessing.h  postslice.cpp  postslice.h  preslice.cpp  preslice.h  processing.cpp  processing.h  slice.cpp  slice.h
src/Servo/: DEV_Servo_Config.cpp  DEV_Servo_Config.h  PCA9685_Servo.cpp  PCA9685_Servo.h
src/Threads/: adc.cpp  adc.h  broadcaster.cpp  broadcaster.h  epd.cpp  epd.h  i2c.cpp  i2c.h  motor.cpp  motor.h  pid.cpp  pid.h  rtimuloop.cpp  rtimuloop.h  serialport.cpp  serialport.h
